--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Build an API about yourself",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,7 @@
   "homepage": "https://github.com/SF-WDI-LABS/express-personal-api",
   "dependencies": {
     "body-parser": "^1.15.0",
-    "express": "^4.13.4",
+    "express": "^4.15.2",
     "mongoose": "^4.4.10"
   }
 }
