--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/sf-wdi-25/express_self_api/issues"
   },
-  "homepage": "https://github.com/sf-wdi-25/express_self_api#readme"
+  "homepage": "https://github.com/sf-wdi-25/express_self_api#readme",
+  "dependencies": {
+    "body-parser": "^1.13.3",
+    "bower": "^1.5.2",
+    "express": "^4.13.3",
+    "express-session": "^1.11.3",
+    "method-override": "^2.3.5",
+    "mongoose": "^4.1.5"
+  }
 }
